# fides-jax

./: .gitignore  pyproject.toml  setup.cfg
fides/: minimize.py  trust_region_jax.py
fides_jax/: __init__.py  minimize.py  steps.py  subproblem.py  trust_region_jax.py
fides_jax.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
