[build-system]
requires = [
  "setuptools >= 52.0.0",
  "wheel >= 0.36.2",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target-version = ['py311']
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3

[project]
name = "fides_jax"
version = "0.7.8"

[tool.setuptools.package-dir]
fides_jax = "fides_jax"

